# nix-qemu-esp32c3-rust-example

./: .envrc  .gitignore  .gitlab-ci.yml  README.md  flake.nix  nixpkgs-cargo-linker-workaround.patch  rust-toolchain.toml
.github/workflows/: nix-flake-check.yml  qemu-check-blinky.yml
blinky/: Cargo.toml  default.nix
blinky/.cargo/: config.toml
blinky/src/: main.rs
