[package]
name = "blinky"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal         = { version = "1.0.0-beta.1", features = ["esp32c3", "unstable"] }
esp-backtrace   = { version = "0.16.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println     = { version = "0.14.0", features = ["esp32c3"] }
esp-bootloader-esp-idf = "0.1.0"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false