[package]
name = "blinky"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal         = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-backtrace   = { version = "0.19.0", features = ["esp32c3", "panic-handler", "println"] }
esp-println     = { version = "0.17.0", features = ["esp32c3"] }
# Hold back at 0.4.0; 0.5.0 causes:
# E (14) boot_comm: Image requires efuse blk rev >= v207.28, but chip is v1.3
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false